--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.vs/TestApp/v15/Server/sqlite3/storage.ide-wal
+.vs/TestApp/v15/Server/sqlite3/storage.ide-shm
+.vs/TestApp/v15/Server/sqlite3/storage.ide
+.vs/TestApp/v15/Server/sqlite3/db.lock
+.vs/TestApp/v15/.suo
